k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports: 
    - protocol: TCP
      port: 8000 # Service port
      targetPort: 8000 # Container port
  type: ClusterIP # internal service
