k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports: 
    - protocol: TCP
      port: 80 # Service port
      targetPort: 80 # Container port
  type: ClusterIP # internal service
